--- a/miniprogram/project.config.json
+++ b/miniprogram/project.config.json
@@ -1,5 +1,5 @@
 {
-  "appid": "touristappid",
+  "appid": "wxeccdbb5ee9b092b0",
   "compileType": "miniprogram",
   "libVersion": "2.27.0",
   "packOptions": {
